--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -227,7 +229,7 @@
                 </div>
                 <div class="panel-default">
                     <input id="payment_defult" name="check_method" type="radio" data-target="createp_account">
-                    <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">PayPal <img src="assets\img\visha\papyel.png" alt=""></label>
+                    <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">Thanh Toán khi nhận hàng <img src="assets\img\visha\papyel.png" alt=""></label>
 
                     <div id="collapsedefult" class="collapse one" data-parent="#accordion">
                         <div class="card-body1">
@@ -236,7 +238,7 @@
                     </div>
                 </div>
                 <div class="order_button">
-                    <button id="dat-hang" type="submit">Đặt Hàng</button>
+                    <button id="dat-hang">Đặt Hàng</button>
                 </div>
             </div>
         </form>
