--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
@@ -71,13 +71,7 @@
     .modal-content {
         padding: 1rem;
     }
-    .price-container {
-        display: flex;
-        align-items: center;
-    }
-    .price-container span {
-        margin-left: 5px;
-    }
+    
 </style>
 
 <h1>Thêm Sản Phẩm</h1>
@@ -465,7 +459,6 @@
                                         <td>
                                        <div class="price-container">
                                             <input type="number" class="form-control" id="dgctsp" name="ChiTietSps[${count}].DonGia" required min="0" max="900000000" onblur="checkDonGia(this)" />
-                                        <span>.000đ</span>
                                     </div>
                                 </td>
                                 <td>
@@ -486,18 +479,24 @@
                 
         }
                 function checkDonGia(input) {
-                if (input.value > 900000000) {
+                if(input.value == ''){
+                        input.value = 1000;
+                    }
+                    else if (input.value > 900000000) {
                     input.value = 900000000;
                 } else if (input.value < 0) {
-                    input.value = 0;
+                    input.value = 1000;
                 }
             }
 
             function checkSoLuongTon(input) {
-                if (input.value > 999) {
+                if(input.value == ''){
+                        input.value = 1;
+                    }
+                    else if (input.value > 999) {
                     input.value = 999;
                 } else if (input.value < 0) {
-                    input.value = 0;
+                    input.value = 1;
                 }
             }
         function removeRow(button) {
