--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/UpdateSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/UpdateSanPham.cshtml
@@ -238,7 +238,7 @@
                                 <input type="number" name="DonGia" id="dongia_in" class="form-control" value="@formattedDonGia" required min="0" max="900000000" onblur="checkDonGia(this)" />
                             </td>
                             <td>
-                                <input type="number" name="SoLuongTon" id="soluong_in" class="form-control" value="@item.SoLuongTon" required min="0" max="999" onblur="checkSoLuongTon(this)" />
+                                    <input type="number" name="SoLuongTon" id="soluong_in" class="form-control" value="@item.SoLuongTon" required min="0" max="999" onblur="checkSoLuongTon(this)" />
                             </td>
                             <td>
                         @if (item.TrangThai == 0)
@@ -285,6 +285,26 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
             <script>
+                    function checkSoLuongTon(input) {
+                    if(input.value == ''){
+                        input.value = 1;
+                    }
+                    else if (input.value > 999) {
+                        input.value = 999;
+                    } else if (input.value < 0) {
+                        input.value = 1;
+                    }
+                    }
+                    function checkDonGia(input) {
+                            if(input.value == ''){
+                                input.value = 1000;
+                            }
+                                else if (input.value > 900000000) {
+                                    input.value = 900000000;
+                            } else if (input.value < 0) {
+                                input.value = 1000;
+                            }
+                    }
                 $(document).ready(function () {
                         $('#productImageFile').change(function (e) {
                         var reader = new FileReader();
@@ -339,7 +359,7 @@
                         }
                     });
 
-                    $('.suact').on('click', function () {
+                        $('.suact').on('click', function () {
                         var sku = $(this).data('sku');
                         var form = $('#updateChiTietSpForm-' + sku);
                         var isValid = true;
